# OpenGL

./: README.md
res/shaders/: BasicShader.shader
src/: CMakeLists.txt  ErrorChecker.cpp  ErrorChecker.h  ErrorChecking.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp
